--- a/main/fxml/com/newdawn/gui/fleet/FleetManagementScreen.fxml
+++ b/main/fxml/com/newdawn/gui/fleet/FleetManagementScreen.fxml
@@ -95,7 +95,7 @@
                           <content>
                             <AnchorPane id="Content" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                               <children>
-                                <ListView fx:id="availableOrdersListView" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                <ListView fx:id="availableOrdersListView" onMouseClicked="#onAvailableOrderClick" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                               </children>
                             </AnchorPane>
                           </content>
