--- a/main/fxml/com/newdawn/gui/MainScreen.fxml
+++ b/main/fxml/com/newdawn/gui/MainScreen.fxml
@@ -15,6 +15,7 @@
           <items>
             <MenuItem mnemonicParsing="false" onAction="#showScreenTabAction" text="Economic Screen" fx:id="economicScreenMenuItem" />
             <MenuItem id="" mnemonicParsing="false" onAction="#showScreenTabAction" text="System Map Screen" fx:id="systemMapScreenMenuItem" />
+            <MenuItem mnemonicParsing="false" onAction="#showScreenTabAction" text="Personnel Management Screen" fx:id="personnelManagementScreenMenuItem" />
             <MenuItem mnemonicParsing="false" onAction="#showScreenTabAction" style="" text="Fleet Management Screen" fx:id="fleetManagementScreenMenuItem" />
           </items>
         </Menu>
@@ -43,6 +44,11 @@
           </content>
         </Tab>
         <Tab fx:id="systemMapScreenTab" text="Systems Map">
+          <content>
+            <AnchorPane id="Content" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+          </content>
+        </Tab>
+        <Tab fx:id="personnelManagementScreenTab" text="Personnel Management">
           <content>
             <AnchorPane id="Content" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
           </content>
