--- a/main/fxml/com/newdawn/gui/personnel/PersonnelManagementScreen.fxml
+++ b/main/fxml/com/newdawn/gui/personnel/PersonnelManagementScreen.fxml
@@ -211,6 +211,13 @@
                   </prefWidth>
                 </TableColumn>
               </columns>
+              <contextMenu>
+                <ContextMenu>
+                  <items>
+                    <MenuItem mnemonicParsing="false" onAction="#createTeam" text="Create Team" fx:id="createTeamMenuItem" />
+                  </items>
+                </ContextMenu>
+              </contextMenu>
               <minHeight>
                 <Long fx:value="50" />
               </minHeight>
@@ -236,6 +243,23 @@
           </content>
         </TitledPane>
         <ListView fx:id="skillsListView" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="0" />
+        <TitledPane animated="false" collapsible="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Potential Assignments" GridPane.columnIndex="1" GridPane.rowIndex="1">
+          <content>
+            <AnchorPane id="Content" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+              <children>
+                <Label text="Assignment Filter" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="3.0" />
+                <ComboBox fx:id="assignmentsFilterComboBox" AnchorPane.leftAnchor="120.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <items>
+                    <FXCollections fx:factory="observableArrayList">
+                      <String fx:value="Teams" />
+                    </FXCollections>
+                  </items>
+                </ComboBox>
+                <ListView fx:id="assigmentsListView" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0" />
+              </children>
+            </AnchorPane>
+          </content>
+        </TitledPane>
       </children>
       <columnConstraints>
         <ColumnConstraints fillWidth="false" hgrow="SOMETIMES">
